--- a/bearplane.html
+++ b/bearplane.html
@@ -121,34 +121,78 @@
     <p>Grab a controller and enlist a co-pilot! Player 2 joins as Rifle Rat, your gun-toting sidekick. Join forces, double your firepower, and deliver freedom&mdash;one explosion at a time.</p>
   </div>
 
-  <div class="section faq">
-    <h2>FAQ</h2>
+<div class="section faq">
+  <h2>FAQ</h2>
 
-    <div class="faq-item">
-      <h3>Is Bearplane available on Steam?</h3>
-      <p>Yes! Bearplane is available now on Steam for a one-time purchase of $4.99.</p>
-    </div>
-
-    <div class="faq-item">
-      <h3>Is it free on mobile?</h3>
-      <p>The mobile version is free to start, with an optional one-time upgrade to unlock the full game and all its features.</p>
-    </div>
-
-    <div class="faq-item">
-      <h3>What does the full game unlock include?</h3>
-      <p>Special hats with unique powers, double mission rewards, leaderboard access, mission skipping, bonus cartoon blood, and the ability to play as Rocket Rat with a controller.</p>
-    </div>
-
-    <div class="faq-item">
-      <h3>Is there co-op on mobile?</h3>
-      <p>Yes! Just plug in a controller and player 2 can join as Rifle Rat anytime.</p>
-    </div>
-
-    <div class="faq-item">
-      <h3>Does the game support localization?</h3>
-      <p>Mostly, Bearplane supports 13+ languages, including French, Spanish, Japanese, and more.</p>
-    </div>
+  <div class="faq-item">
+    <h3>Is it really inspired by a true story?</h3>
+    <p>Believe it or not—yes! <em>Bearplane</em> takes loose inspiration from Wojtek, the real-life bear who served alongside Polish soldiers in World War II. Our version adds a few more jet engines and bazookas... but the heart of it is pure wartime legend.</p>
   </div>
+
+  <div class="faq-item">
+    <h3>What was the development of Bearplane like?</h3>
+    <p><em>Bearplane</em> took flight in 2020 during lockdown. With travel and work suddenly off the table, I found myself deep in the weird corners of history, where I discovered the incredible story of Wojtek. It was bizarre, funny, and strangely heroic… I HAD to make a game about it.</p>
+    <p>I was inspired by the tonal contrast in <em>Fallout</em>—dark, brutal combat wrapped in cheerful 1940s vibes. I wanted <em>Bearplane</em> to feel like that too: chaotic action in a cartoon world. I also borrowed from <em>Skyrim’s</em> shout mechanic and the physical comedy of <em>Tom and Jerry</em>, where the audio always perfectly matches the slapstick mayhem.</p>
+    <p>For two years, I focused entirely on getting the movement and feel just right, much like how <em>Super Mario 64</em> was built around Mario’s movement before anything else.</p>
+    <p>By 2023, I brought on incredible artists—Leo Seibert, Jordan Wadel, and Vinnie Peters—who helped bring <em>Bearplane</em> to life. Since then, over 7,000 hours (and cups of coffee) have gone into turning this very reasonable idea of a bear with a jetpack into a fully playable game.</p>
+  </div>
+
+  <div class="faq-item">
+    <h3>Is Bearplane single-player or multiplayer?</h3>
+    <p>Both! You can fly solo or connect a controller for local co-op. Player 2 controls Rocket Rat and his trusty rifle. Team up and double the firepower!</p>
+  </div>
+
+  <div class="faq-item">
+    <h3>What devices and controls are supported?</h3>
+    <p>On mobile, play with touch controls or a gamepad. On PC, use mouse and keyboard or a controller. <em>Bearplane</em> also runs great on Steam Deck.</p>
+  </div>
+
+  <div class="faq-item">
+    <h3>Does Bearplane support gamepads?</h3>
+    <p>Yes! Gamepad support is built in across all platforms.</p>
+  </div>
+
+  <div class="faq-item">
+    <h3>Can I play Bearplane offline?</h3>
+    <p>Absolutely. No Wi-Fi? No problem. You can play offline with no penalties or restrictions.</p>
+  </div>
+
+  <div class="faq-item">
+    <h3>Can I share my progress between devices?</h3>
+    <p>Not yet, but we’re working on cloud sync for a future update so you can blast baddies seamlessly across all your devices.</p>
+  </div>
+
+  <div class="faq-item">
+    <h3>Will there be future updates?</h3>
+    <p>Definitely! We’re planning monthly updates packed with new hats, game modes, and surprises.</p>
+  </div>
+
+  <div class="faq-item">
+    <h3>Is Bearplane kid-friendly?</h3>
+    <p><em>Bearplane</em> features cartoon violence, dismemberment, and blood—think Saturday morning mayhem with a slight edge. Parental discretion is advised.</p>
+  </div>
+
+  <div class="faq-item">
+    <h3>Is the game available in other languages?</h3>
+    <p>The full game is in English, but Rocket Rat’s voice lines and tutorials are localized into 8 additional languages: French, Spanish, German, Polish, Portuguese, Italian, Japanese, and Simplified Chinese.</p>
+  </div>
+
+  <div class="faq-item">
+    <h3>Do hats affect gameplay?</h3>
+    <p>They sure do! Each hat comes with a unique power or twist that changes how you play. It’s flair with firepower.</p>
+  </div>
+
+  <div class="faq-item">
+    <h3>How do I unlock the full game on mobile?</h3>
+    <p>Just tap the “Buy Full Game” button on the main menu to get all the goodies and unleash the full <em>Bearplane</em> experience.</p>
+  </div>
+
+  <div class="faq-item">
+    <h3>Where can I ask questions or submit feedback?</h3>
+    <p>We’d love to hear from you! Email us at <a href="mailto:AtomicMills@aol.com">AtomicMills@aol.com</a> or join the conversation on <a href="https://discord.gg/HK3xWJTdjc" target="_blank">Discord</a>. Whether it’s ideas, bugs, or just bear puns—we’re all ears.</p>
+  </div>
+</div>
+
 
 </body>
 </html>
