--- a/bearplane.html
+++ b/bearplane.html
@@ -193,6 +193,15 @@
   </div>
 </div>
 
-
+  <div class="social-links">
+    <p>Connect with Us:</p>
+    <a href="https://www.instagram.com/atomicmillsco/" target="_blank">Instagram</a> |
+    <a href="https://www.linkedin.com/company/atomic-mills" target="_blank">LinkedIn</a> |
+    <a href="https://x.com/AtomicMillsCo" target="_blank">X</a> |
+    <a href="mailto:AtomicMills@aol.com">Email</a> |
+    <a href="blog.html">Blog</a> |
+    <a href="legal.html">Legal</a>
+  </div>
+  
 </body>
 </html>
