--- a/bearplane.html
+++ b/bearplane.html
@@ -85,6 +85,16 @@
     display: block;
     margin: 0 auto 10px;
   }
+
+  .social-links {
+    margin-top: 40px;
+  }
+
+  .social-links a {
+    display: inline-block;
+    margin: 0 10px;
+  }
+
 </style>
 </head>
 <body>
