--- a/bearplane.html
+++ b/bearplane.html
@@ -10,18 +10,18 @@
     text-align: center;
     padding: 40px;
     margin: 0;
-    font-size: 16px; /* Base size for mobile */
+    font-size: 12px; /* Base size for mobile */
   }
 
   @media (min-width: 768px) {
     body {
-      font-size: 12px; /* Tablet and small desktop */
+      font-size: 10px; /* Tablet and small desktop */
     }
   }
 
   @media (min-width: 1024px) {
     body {
-      font-size: 20px; /* Large desktop */
+      font-size: 18px; /* Large desktop */
     }
   }
 
@@ -135,8 +135,8 @@
   <h2>FAQ</h2>
 
   <div class="faq-item">
-    <h3>Is it really inspired by a true story?</h3>
-    <p>Believe it or not—yes! <em>Bearplane</em> takes loose inspiration from Wojtek, the real-life bear who served alongside Polish soldiers in World War II. Our version adds a few more jet engines and bazookas... but the heart of it is pure wartime legend.</p>
+    <h3>Is Bearplane really inspired by a true story?</h3>
+    <p>Believe it or not—yes! <em>Bearplane</em> takes loose inspiration from Wojtek, the real-life bear who served alongside Polish soldiers in World War II. Our version adds a few more jet packs and shenanigans :D</p>
   </div>
 
   <div class="faq-item">
@@ -154,7 +154,7 @@
 
   <div class="faq-item">
     <h3>What devices and controls are supported?</h3>
-    <p>On mobile, play with touch controls or a gamepad. On PC, use mouse and keyboard or a controller. <em>Bearplane</em> also runs great on Steam Deck.</p>
+    <p>On mobile, play with touch controls or a gamepad. On PC, use mouse, keyboard, or a controller. <em>Bearplane</em> also runs great on Steam Deck.</p>
   </div>
 
   <div class="faq-item">
@@ -168,13 +168,13 @@
   </div>
 
   <div class="faq-item">
-    <h3>Can I share my progress between devices?</h3>
-    <p>Not yet, but we’re working on cloud sync for a future update so you can blast baddies seamlessly across all your devices.</p>
+    <h3>Will there be future updates?</h3>
+    <p>Definitely! We’re planning monthly updates packed with new hats, game modes, and surprises.</p>
   </div>
 
   <div class="faq-item">
-    <h3>Will there be future updates?</h3>
-    <p>Definitely! We’re planning monthly updates packed with new hats, game modes, and surprises.</p>
+    <h3>Can I share my progress between devices?</h3>
+    <p>Not yet, but we’re aiming to include cloud sync in a future update.</p>
   </div>
 
   <div class="faq-item">
@@ -184,7 +184,7 @@
 
   <div class="faq-item">
     <h3>Is the game available in other languages?</h3>
-    <p>The full game is in English, but Rocket Rat’s voice lines and tutorials are localized into 8 additional languages: French, Spanish, German, Polish, Portuguese, Italian, Japanese, and Simplified Chinese.</p>
+    <p>The full game is in English, but Rocket Rat’s dialogue and tutorials are localized into 8 additional languages: French, Spanish, German, Polish, Portuguese, Italian, Japanese, and Simplified Chinese.</p>
   </div>
 
   <div class="faq-item">
