--- a/bearplane.html
+++ b/bearplane.html
@@ -95,13 +95,17 @@
     margin: 0 10px;
   }
 
+  .logo-top {
+    display: block;
+    margin: 0 auto 10px;
+    padding: 0;
+  }
+
 </style>
 </head>
 <body>
 
-  <h1>
-    <img src="800x480-main.gif" alt="Bearplane Logo" class="section">
-  </h1>
+  <img src="800x480-main.gif" alt="Bearplane Logo" class="section logo-top">
 
   <div class="section">
     <p>Take to the skies as a rocket-powered bear in Bearplane&mdash;a whimsical, action-packed adventure inspired by the legendary tale of Wojtek. Battle dastardly foes with outrageous abilities, explosive power-ups, and a whole lot of midair mayhem.</p>
