--- a/bearplane.html
+++ b/bearplane.html
@@ -162,10 +162,10 @@
         <img src="steam-badge.png" alt="Steam" />
       </a>
       <a href="https://apps.apple.com/app/id6456222792" target="_blank">
-        <img src="appstore-badge.png" alt="App Store" />
+        <img src="ios-app-store-badge.png" alt="App Store" />
       </a>
       <a href="https://play.google.com/store/apps/details?id=com.MatthewBurton.BearPlane" target="_blank">
-        <img src="googleplay-badge.png" alt="Google Play" />
+        <img src="google-play-badge.png" alt="Google Play" />
       </a>
     </div>
   </div>
