--- a/bearplane.html
+++ b/bearplane.html
@@ -134,8 +134,8 @@
   }
   
   .store-buttons img {
-    height: 40px;
-    max-width: 150px;
+    height: 60px;
+    max-width: 220px;
     object-fit: contain;
   }
 
@@ -150,7 +150,7 @@
 
   <div class="section">
     <div class="trailer-button">
-      <a href="#trailer" class="btn">Watch the Trailer</a>
+      <a href="https://youtu.be/3JW6-kAru64" class="btn" target="_blank">Watch the Trailer</a>
     </div>
   
     <p class="intro-paragraph">
