--- a/bearplane.html
+++ b/bearplane.html
@@ -142,11 +142,20 @@
   .intro-paragraph {
     text-align: center;
   }
+
+  .hero-gif {
+    display: block;
+    width: 100vw;        /* Full viewport width */
+    max-width: none;     /* Override default image limit */
+    margin: 0;           /* Remove default margin */
+    padding: 0;          /* Remove any padding */
+  }
+
 </style>
 </head>
 <body>
 
-  <img src="800x480-main.gif" alt="Bearplane Logo" class="section logo-top">
+  <img src="800x480-main.gif" alt="Bearplane Logo" class="hero-gif">
 
   <div class="section">
     <div class="trailer-button">
