--- a/bearplane.html
+++ b/bearplane.html
@@ -145,11 +145,18 @@
 
   .hero-gif {
     display: block;
-    width: 100vw;        /* Full viewport width */
-    max-width: none;     /* Override default image limit */
-    margin: 0;           /* Remove default margin */
-    padding: 0;          /* Remove any padding */
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
   }
+
+  @media (max-width: 768px) {
+    .hero-gif {
+      width: 100vw;
+      max-width: none;
+      margin: 0;
+      padding: 0;
+    }
 
 </style>
 </head>
