--- a/bearplane.html
+++ b/bearplane.html
@@ -152,10 +152,10 @@
   }
 
   .hero-gif {
-    width: 100vw;
-    max-width: none;
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
     display: block;
-    margin: 0;
   }
   
   @media (max-width: 768px) {
