--- a/bearplane.html
+++ b/bearplane.html
@@ -158,7 +158,7 @@
     display: block;
   }
   
-  @media (max-width: 768px) {
+  @media (max-aspect-ratio: 1) {
     .hero-gif {
       width: 100vw;
       max-width: none;
