--- a/bearplane.html
+++ b/bearplane.html
@@ -90,6 +90,7 @@
 
   .social-links {
     margin-top: 40px;
+    margin-bottom: 60px; /* Add this for bottom spacing */
   }
 
   .social-links a {
@@ -293,7 +294,7 @@
 </div>
 
   <div class="social-links">
-    <p>Connect with Us:</p>
+    <a href="https://www.atomicmills.com" target="_blank">Home</a> |
     <a href="https://www.instagram.com/atomicmillsco/" target="_blank">Instagram</a> |
     <a href="https://www.linkedin.com/company/atomic-mills" target="_blank">LinkedIn</a> |
     <a href="https://x.com/AtomicMillsCo" target="_blank">X</a> |
