--- a/bearplane.html
+++ b/bearplane.html
@@ -305,7 +305,7 @@
 </div>
 
   <div class="social-links">
-    <a href="https://www.atomicmills.com" target="_blank">Home</a> |
+    <a href="https://www.atomicmills.com">Home</a> |
     <a href="https://www.instagram.com/atomicmillsco/" target="_blank">Instagram</a> |
     <a href="https://www.linkedin.com/company/atomic-mills" target="_blank">LinkedIn</a> |
     <a href="https://x.com/AtomicMillsCo" target="_blank">X</a> |
