--- a/bearplane.html
+++ b/bearplane.html
@@ -117,7 +117,7 @@
     display: inline-block;
     background-color: darkred;
     color: white;
-    padding: 16px 32px; /* Bigger button */
+    padding: 12px 32px; /* Bigger button */
     font-weight: bold;
     font-size: 1.4em;    /* Scale up text */
     text-decoration: none;
@@ -183,14 +183,14 @@
   <img src="800x480-main.gif" alt="Bearplane Logo" class="hero-gif">
 
   <div class="section">
-<!--     <div class="trailer-button">
+    <div class="trailer-button">
       <a href="https://youtu.be/3JW6-kAru64" class="btn" target="_blank">Watch the Trailer</a>
-    </div> -->
+    </div>
   
-    <p class="watch-trailer-link">
+<!--     <p class="watch-trailer-link">
       — <a href="https://youtu.be/3JW6-kAru64" target="_blank">Watch the Trailer</a> —
     </p>
-
+ -->
     <p class="intro-paragraph">
       <em><strong>Take to the skies as a rocket-powered bear in Bearplane&mdash;a whimsical, action-packed adventure inspired by the legendary tale of Wojtek. Battle dastardly foes with outrageous abilities, explosive power-ups, and a whole lot of midair mayhem.</strong></em>
     </p>
