--- a/bearplane.html
+++ b/bearplane.html
@@ -195,7 +195,7 @@
     </p>
  -->
     <p class="intro-paragraph">
-      <em><strong>Take to the skies as a rocket-powered bear in Bearplane&mdash;a whimsical, action-packed adventure inspired by the legendary tale of Wojtek. Battle dastardly foes with outrageous abilities, explosive power-ups, and a whole lot of midair mayhem.</strong></em>
+      <em><strong>Take to the skies as a rocket-powered bear in Bearplane: a whimsical, action-packed adventure inspired by the legendary tale of Wojtek. Battle dastardly foes with outrageous abilities, explosive power-ups, and a whole lot of midair mayhem.</strong></em>
     </p>
 
     <div class="store-buttons">
@@ -299,6 +299,11 @@
   <div class="faq-item">
     <h3>How do I unlock the full game on mobile?</h3>
     <p>Just tap the “Buy Full Game” button on the main menu to get all the goodies and unleash the full <em>Bearplane</em> experience.</p>
+  </div>
+
+  <div class="faq-item">
+    <h3>Where can I find the Privacy Policy and Terms of Service?</h3>
+    <p>All legal documents, including our Privacy Policy and Terms of Service, can be found on our <a href="legal.html">Legal</a> page.</p>
   </div>
 
   <div class="faq-item">
