--- a/bearplane.html
+++ b/bearplane.html
@@ -267,6 +267,23 @@
   </div>
 
   <div class="faq-item">
+    <h3>What’s the difference between the Steam and mobile versions of Bearplane?</h3>
+    <p>The core gameplay is the same, but there are a few key differences:</p>
+    <ul>
+      <li><strong>Steam version:</strong> A one-time purchase of $4.99 unlocks the full experience right away—no in-app purchases.</li>
+      <li><strong>Mobile version:</strong> Free to start. You can unlock the full game for $4.99, which includes:</li>
+      <ul>
+        <li>A wardrobe of <strong>special hats</strong> with powerful, unique abilities</li>
+        <li><strong>Double rewards</strong> from missions (like Nukey Nectar and Flappy Flakes)</li>
+        <li>The ability to <strong>skip missions</strong></li>
+        <li>Access to <strong>leaderboards and achievements</strong></li>
+        <li><strong>10% more cartoon blood</strong> (you’re welcome)</li>
+        <li><strong>Bonus:</strong> Plug in a controller and play as Rocket Rat, while Bearplane follows and auto-attacks!</li>
+      </ul>
+    </ul>
+  </div>
+
+  <div class="faq-item">
     <h3>Can I play Bearplane offline?</h3>
     <p>Absolutely. No Wi-Fi? No problem. You can play offline with no penalties or restrictions.</p>
   </div>
