--- a/bearplane.html
+++ b/bearplane.html
@@ -195,7 +195,7 @@
     </p>
  -->
     <p class="intro-paragraph">
-      <em><strong>Take to the skies as a rocket-powered bear in Bearplane: a whimsical, action-packed adventure inspired by the legendary tale of Wojtek. Battle dastardly foes with outrageous abilities, explosive power-ups, and a whole lot of midair mayhem.</strong></em>
+      <em><strong>Take to the skies as a rocket-powered bear in Bearplane: a whimsical, action-packed adventure loosely inspired by the legendary tale of Wojtek the Bear. Battle dastardly foes with outrageous abilities, nuclear-fused snacks, and a whole lot of midair mayhem.</strong></em>
     </p>
 
     <div class="store-buttons">
