--- a/bearplane.html
+++ b/bearplane.html
@@ -121,7 +121,7 @@
     color: white;
     padding: 15px 40px; /* Shorter & wider */
     font-weight: bold;
-    font-size: 1.5em;
+    font-size: 1.4em;
     text-decoration: none;
     border-radius: 8px;
     transition: background-color 0.2s ease;
@@ -232,7 +232,7 @@
   <div class="section">
     <h2>Co-op chaos</h2>
     <img src="800px-co-op.gif" alt="Co-op GIF" class="gif">
-    <p>Grab a controller and enlist a co-pilot! Player 2 joins as Rifle Rat, your gun-toting sidekick. Join forces, double your firepower, and deliver freedom&mdash;one explosion at a time.</p>
+    <p>Grab a controller and enlist a co-pilot! Player 2 joins as Rifle Rat, your gun-toting sidekick. Join forces, double your firepower, and deliver freedom one explosion at a time.</p>
   </div>
 
 <div class="section faq">
@@ -246,9 +246,10 @@
   <div class="faq-item">
     <h3>What was the development of Bearplane like?</h3>
     <p><em>Bearplane</em> took flight in 2020 during lockdown. With travel and work suddenly off the table, I found myself deep in the weird corners of history, where I discovered the incredible story of Wojtek. It was bizarre, funny, and strangely heroic… I HAD to make a game about it.</p>
-    <p>I was inspired by the tonal contrast in <em>Fallout</em>—dark, brutal combat wrapped in cheerful 1940s vibes. I wanted <em>Bearplane</em> to feel like that too: chaotic action in a cartoon world. I also borrowed from <em>Skyrim’s</em> shout mechanic and the physical comedy of <em>Tom and Jerry</em>, where the audio always perfectly matches the slapstick mayhem.</p>
-    <p>For two years, I focused entirely on getting the movement and feel just right, much like how <em>Super Mario 64</em> was built around Mario’s movement before anything else.</p>
-    <p>By 2023, I brought on incredible artists—Leo Seibert, Jordan Wadel, and Vinnie Peters—who helped bring <em>Bearplane</em> to life. Since then, over 7,000 hours (and cups of coffee) have gone into turning this very reasonable idea of a bear with a jetpack into a fully playable game.</p>
+    <p>I was inspired by the tonal contrast in <em>Fallout</em>—brutal combat wrapped in cheerful 1940s vibes. I wanted <em>Bearplane</em> to feel like that too. I also borrowed from <em>Skyrim’s</em> shout mechanic and the physical comedy of the cartoon <em>Tom and Jerry</em>, where the audio always perfectly matches the slapstick mayhem.</p>
+    <p>For two years, I focused entirely on getting the movement and core mechanic to feel just right, much like how <em>Super Mario 64</em> was built around Mario’s movement before anything else.</p>
+    <p>By 2023, I brought on incredible artists Leo Seibert, Jordan Wadel, and Vinnie Peters, who helped bring <em>Bearplane</em> to life visually. I also worked with composer Sean Smith, who created the game’s big-band score and recorded it with a real jazz band to capture the spirit of the era.</p>
+    <p>Since then, over 7,000 hours (and cups of coffee) have gone into turning this very reasonable idea of a bear with a jetpack into a fully playable game.</p>
   </div>
 
   <div class="faq-item">
