--- a/bearplane.html
+++ b/bearplane.html
@@ -285,6 +285,11 @@
   </div>
 
   <div class="faq-item">
+    <h3>How do I unlock the full game on mobile?</h3>
+    <p>Just tap the “Buy Full Game” button on the main menu to get all the goodies and unleash the full <em>Bearplane</em> experience.</p>
+  </div>
+  
+  <div class="faq-item">
     <h3>Can I play Bearplane offline?</h3>
     <p>Absolutely. No Wi-Fi? No problem. You can play offline with no penalties or restrictions.</p>
   </div>
@@ -301,7 +306,7 @@
 
   <div class="faq-item">
     <h3>Is Bearplane kid-friendly?</h3>
-    <p><em>Bearplane</em> features cartoon violence, dismemberment, and blood—think Saturday morning mayhem with a slight edge. Parental discretion is advised.</p>
+    <p><em>Bearplane</em> features cartoon violence, dismemberment, and blood. Think Saturday morning mayhem with a slight edge. Parental discretion is advised.</p>
   </div>
 
   <div class="faq-item">
@@ -312,11 +317,6 @@
   <div class="faq-item">
     <h3>Do hats affect gameplay?</h3>
     <p>They sure do! Each hat comes with a unique power or twist that changes how you play. It’s flair with firepower.</p>
-  </div>
-
-  <div class="faq-item">
-    <h3>How do I unlock the full game on mobile?</h3>
-    <p>Just tap the “Buy Full Game” button on the main menu to get all the goodies and unleash the full <em>Bearplane</em> experience.</p>
   </div>
 
   <div class="faq-item">
