--- a/bearplane.html
+++ b/bearplane.html
@@ -240,14 +240,14 @@
 
   <div class="faq-item">
     <h3>Is Bearplane really inspired by a true story?</h3>
-    <p>Believe it or not—yes! <em>Bearplane</em> takes loose inspiration from Wojtek, the real-life bear who served alongside Polish soldiers in World War II. Our version adds a few more jet packs and shenanigans :D</p>
+    <p>Believe it or not, yes! <em>Bearplane</em> takes loose inspiration from Wojtek, the real-life bear who served alongside Polish soldiers in World War II. Our version adds a few more jet packs and shenanigans :D</p>
   </div>
 
   <div class="faq-item">
     <h3>What was the development of Bearplane like?</h3>
     <p><em>Bearplane</em> took flight in 2020 during lockdown. With travel and work suddenly off the table, I found myself deep in the weird corners of history, where I discovered the incredible story of Wojtek. It was bizarre, funny, and strangely heroic… I HAD to make a game about it.</p>
     <p>I was inspired by the tonal contrast in <em>Fallout</em>—brutal combat wrapped in cheerful 1940s vibes. I wanted <em>Bearplane</em> to feel like that too. I also borrowed from <em>Skyrim’s</em> shout mechanic and the physical comedy of the cartoon <em>Tom and Jerry</em>, where the audio always perfectly matches the slapstick mayhem.</p>
-    <p>For two years, I focused entirely on getting the movement and core mechanic to feel just right, much like how <em>Super Mario 64</em> was built around Mario’s movement before anything else.</p>
+    <p>For two years, I focused entirely on getting the movement and core mechanic to feel just right.</p>
     <p>By 2023, I brought on incredible artists Leo Seibert, Jordan Wadel, and Vinnie Peters, who helped bring <em>Bearplane</em> to life visually. I also worked with composer Sean Smith, who created the game’s big-band score and recorded it with a real jazz band to capture the spirit of the era.</p>
     <p>Since then, over 7,000 hours (and cups of coffee) have gone into turning this very reasonable idea of a bear with a jetpack into a fully playable game.</p>
   </div>
@@ -271,7 +271,7 @@
     <h3>What’s the difference between the Steam and mobile versions of Bearplane?</h3>
     <p>The core gameplay is the same, but there are a few key differences:</p>
     <ul>
-      <li><strong>Steam version:</strong> A one-time purchase of $4.99 unlocks the full experience right away—no in-app purchases.</li>
+      <li><strong>Steam version:</strong> A one-time purchase of $4.99 unlocks the full experience right away. No in-app purchases.</li>
       <li><strong>Mobile version:</strong> Free to start. You can unlock the full game for $4.99, which includes:</li>
       <ul>
         <li>A wardrobe of <strong>special hats</strong> with powerful, unique abilities</li>
@@ -306,17 +306,12 @@
 
   <div class="faq-item">
     <h3>Is Bearplane kid-friendly?</h3>
-    <p><em>Bearplane</em> features cartoon violence, dismemberment, and blood. Think Saturday morning mayhem with a slight edge. Parental discretion is advised.</p>
+    <p><em>Bearplane</em> features cartoon violence, dismemberment, and blood. Parental discretion is advised.</p>
   </div>
 
   <div class="faq-item">
     <h3>Is the game available in other languages?</h3>
     <p>The full game is in English, but Rocket Rat’s dialogue and tutorials are localized into 8 additional languages: French, Spanish, German, Polish, Portuguese, Italian, Japanese, and Simplified Chinese.</p>
-  </div>
-
-  <div class="faq-item">
-    <h3>Do hats affect gameplay?</h3>
-    <p>They sure do! Each hat comes with a unique power or twist that changes how you play. It’s flair with firepower.</p>
   </div>
 
   <div class="faq-item">
