--- a/bearplane.html
+++ b/bearplane.html
@@ -179,6 +179,21 @@
     margin-bottom: 20px;
   }
 
+  .atomic-images {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 10px;
+    flex-wrap: wrap;
+  }
+  
+  .atomic-images img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 8px;
+  }
+
 </style>
 </head>
 <body>
@@ -256,6 +271,11 @@
     <h3>Who or what on earth is Atomic Mills?</h3>
     <p>Why, it’s only the most cutting-edge food and beverage company this side of the war effort! Atomic Mills is the (totally fictional) manufacturer behind bold wartime favorites like <em>Nukey Nectar</em>, <em>Honey Thunder Cola</em>, and <em>Flappy Flakes Breakfast Cereal</em>. Founded during the heyday of World War II, Atomic Mills was dedicated to using the limitless potential of nuclear energy and the hard work of radioactive bees to give our brave soldiers a nutritional advantage on the battlefield.</p>
     <p>Fueled by patriotism and a suspicious orange glow, Atomic Mills delivered explosive flavor and questionable science in every bite.</p>
+    <div class="atomic-images">
+      <img src="nn-jar.png" alt="Nukey Nectar" />
+      <img src="ht-bottle.png" alt="Honey Thunder Cola" />
+      <img src="ff-box.png" alt="Flappy Flakes" />
+    </div>
   </div>
 
   <div class="faq-item">
