--- a/bearplane.html
+++ b/bearplane.html
@@ -194,6 +194,13 @@
     border-radius: 8px;
   }
 
+     @media (max-width: 600px) {
+    .atomic-images {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+
 </style>
 </head>
 <body>
