--- a/index.html
+++ b/index.html
@@ -91,24 +91,36 @@
 </div>
 
 
-  <div class="gallery">
-    <div class="gallery-item">
-      <img src="bee-farm.png" alt="Radioactive Bee Farm">
-      <div class="caption">Dean & Eleanor at the radioactive bee farm</div>
-    </div>
-    <div class="gallery-item">
-      <img src="atomic-mills-team.png" alt="The Atomic Mills team, 1941">
-      <div class="caption">The Atomic Mills team, 1941</div>
-    </div>
-    <div class="gallery-item">
-      <img src="flappy-family.png" alt="Family Breakfast with Flappy Flakes">
-      <div class="caption">Family breakfast powered by Flappy Flakes</div>
-    </div>
-    <div class="gallery-item">
-      <img src="honey-thunder.png" alt="Dean at the gym with Honey Thunder Cola">
-      <div class="caption">Dean Lockhart post-workout with Honey Thunder Cola</div>
-    </div>
+<div class="gallery">
+  <div class="gallery-item">
+    <img src="nn-jar.png" alt="Nukey Nectar Ad">
+    <div class="caption">Sweet as Honey, Strong as a Nuke</div>
   </div>
+  <div class="gallery-item">
+    <img src="ht-bottle.png" alt="Honey Thunder Ad">
+    <div class="caption">Made with real Nukey Nectar!</div>
+  </div>
+  <div class="gallery-item">
+    <img src="ff-box.png" alt="Flappy Flakes Ad">
+    <div class="caption">Soar into your day!</div>
+  </div>
+</div>
+
+<!-- Existing row below -->
+<div class="gallery">
+  <div class="gallery-item">
+    <img src="bee-farm.png" alt="Radioactive Bee Farm">
+    <div class="caption">Dean & Eleanor at the radioactive bee farm</div>
+  </div>
+  <div class="gallery-item">
+    <img src="atomic-mills-team.png" alt="The Atomic Mills team, 1941">
+    <div class="caption">The Atomic Mills team, 1941</div>
+  </div>
+  <div class="gallery-item">
+    <img src="flappy-family.png" alt="Family Breakfast with Flappy Flakes">
+    <div class="caption">Family breakfast powered by Flappy Flakes</div>
+  </div>
+</div>
 
   <div class="social-links">
     <p>Connect with Us:</p>
