--- a/bearplane.html
+++ b/bearplane.html
@@ -188,16 +188,21 @@
   }
   
   .atomic-images img {
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     object-fit: cover;
     border-radius: 8px;
+    transition: transform 0.2s ease;
   }
 
-     @media (max-width: 600px) {
-    .atomic-images {
-      flex-direction: column;
-      align-items: center;
+  .atomic-images img:hover {
+    transform: scale(1.05);
+  }
+   
+  @media (max-width: 800px) {
+    .atomic-images img {
+      width: 150px;
+      height: 150px;
     }
   }
 
@@ -282,6 +287,7 @@
       <img src="nn-jar.png" alt="Nukey Nectar" />
       <img src="ht-bottle.png" alt="Honey Thunder Cola" />
       <img src="ff-box.png" alt="Flappy Flakes" />
+      <img src="ht-matt.png" alt="Honey Thunder Gym" />
     </div>
   </div>
 
