--- a/bearplane.html
+++ b/bearplane.html
@@ -301,9 +301,10 @@
     <p>On mobile, play with touch controls or a gamepad. On PC, use mouse, keyboard, or a controller. <em>Bearplane</em> also runs great on Steam Deck.</p>
   </div>
 
-  <div class="faq-item">
-    <h3>Does Bearplane support gamepads?</h3>
-    <p>Yes! Gamepad support is built in across all platforms.</p>
+  <div class="faq-item" id="steam-deck">
+    <h3>Does Bearplane run on Steam Deck?</h3>
+    <p><em>Bearplane</em> runs exceedingly well on Steam Deck. In fact, a lot of the focus for the PC version has gone into optimizing it specifically for Steam Deck, ensuring buttery-smooth performance at 90 FPS.</p>
+    <p>The gamepad layout should be set by default. If it’s not, we recommend switching the controller layout type to "Gamepad" in your Steam Deck settings for the best experience.</p>
   </div>
 
   <div class="faq-item">
