--- a/bearplane.html
+++ b/bearplane.html
@@ -144,6 +144,12 @@
     height: 78px;
     max-width: 264px;
     object-fit: contain;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+  }
+
+  .store-buttons img:hover {
+    transform: scale(1.05);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
   }
 
   .intro-paragraph {
@@ -193,6 +199,7 @@
     object-fit: cover;
     border-radius: 8px;
     transition: transform 0.2s ease;
+    cursor: pointer; /* Add this line */
   }
 
   .atomic-images img:hover {
@@ -204,6 +211,26 @@
       width: 150px;
       height: 150px;
     }
+  }
+
+  .lightbox-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.85);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    display: none;
+  }
+  
+  .lightbox-overlay img {
+    max-width: 90%;
+    max-height: 90%;
+    border-radius: 8px;
   }
 
 </style>
@@ -375,5 +402,26 @@
     <a href="legal.html">Legal</a>
   </div>
   
+<div class="lightbox-overlay" id="lightbox">
+  <img src="" alt="Enlarged Image" id="lightbox-img">
+</div>
+
+  <script>
+    const lightbox = document.getElementById("lightbox");
+    const lightboxImg = document.getElementById("lightbox-img");
+  
+    document.querySelectorAll(".atomic-images img").forEach(img => {
+      img.addEventListener("click", () => {
+        lightboxImg.src = img.src;
+        lightbox.style.display = "flex";
+      });
+    });
+  
+    lightbox.addEventListener("click", () => {
+      lightbox.style.display = "none";
+      lightboxImg.src = "";
+    });
+  </script>
+
 </body>
 </html>
