--- a/bearplane.html
+++ b/bearplane.html
@@ -58,7 +58,10 @@
     background: #fdf7db;
     padding: 20px;
     border: 1px solid #e6d9a8;
-    margin-top: 40px;
+    max-width: 750px;
+    margin: 40px auto;
+    overflow-x: hidden;
+    box-sizing: border-box;
   }
 
   .faq h3 {
@@ -231,6 +234,13 @@
     max-width: 90%;
     max-height: 90%;
     border-radius: 8px;
+  }
+
+  .faq {
+    max-width: 800px;
+    margin: 40px auto;
+    overflow-x: hidden;
+    box-sizing: border-box;
   }
 
 </style>
