--- a/bearplane.html
+++ b/bearplane.html
@@ -173,7 +173,7 @@
     display: block;
   }
   
-  @media (max-aspect-ratio: 1) {
+  @media (max-aspect-ratio: 50/49) {
     .hero-gif {
       width: 100vw;
       max-width: none;
