--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       text-decoration: none;
       color: inherit;
       margin: 30px auto;
-      max-width: 850px;
+      max-width: 700px; /* Matches .section width */
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       transition: box-shadow 0.2s ease;
     }
@@ -99,7 +99,7 @@
     }
     
     .bearplane-image {
-      width: 300px;
+      width: 250px;
       max-width: 100%;
       border-radius: 6px;
     }
@@ -148,8 +148,10 @@
   <div class="bearplane-card-content">
     <img src="800x480-main.gif" alt="Bearplane Preview" class="bearplane-image">
     <div class="bearplane-text">
-      <h2>🎩 Bearplane is Here!</h2>
-      <p><strong>A rocket-powered bear. A sky full of bad guys.</strong><br>The wildest flight of the century is now available on Steam, iOS, and Android.</p>
+      <h2>🎩 Bearplane Will be Taking Off Soon!</h2>
+      <p><strong>A rocket-powered bear. A sky full of bad guys.</strong><br>
+      The wildest flight of the century is coming soon on Steam, iOS, and Android.</p>
+      <p>After decades of innovation in nuclear-infused food and radioactive nectar beverages, Atomic Mills is proud to bring its atomic genius to the world of video games. To celebrate our explosive legacy, we’ve created <em>Bearplane</em>—a high-flying tribute to everything we stand for: chaos, courage, and questionable safety standards.</p>
       <div class="bearplane-tags">
         <span>🕹 Steam</span>
         <span>📱 iOS</span>
